--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
          <li>about</li>
        </ul>
     </nav>
-       <!--h1 class="big-text">Sunny mornings</h1-->
-       <!--test start-->
+       <!--esta parte se controla mediante anim.css-->
+       <!--anim start-->
        <div class="container">
         <div class="window">
           <div class="steps">
@@ -112,7 +112,7 @@
         </div>
       
       </div>
-       <!--test end-->
+       <!--anim end-->
     </section>
   </main>
   <div class="intro">
