--- a/index.html
+++ b/index.html
@@ -114,6 +114,21 @@
       </div>
        <!--anim end-->
     </section>
+    <section class="body">
+      <div class="info">
+        <div class="personal">
+          <h2 id="about">About Me</h2>
+          <p id="about-text">My name is Rolando, although most people call
+            me Rola, Rolis, <b>Ro</b> or Rolaquils (since its a word game with my actual last name).
+            <br>
+            I'm a Software Engineer with tendencies towards web design and cybersecurity.
+            <br>
+            Some other interests I have are photography, graphic design, cinema, and also sports,
+            particularly baseball⚾️ and football🏈 (sign me up for those fantasy leagues 🏟).
+          </p>
+        </div>
+      </div>
+    </section>
   </main>
   <div class="intro">
     <div class="intro-text">
